--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "todotop",
-  "version": "1.0.0",
-  "main": "main.js",
-  "author": "Anderson <contatoahenrique@gmail.com>",
-  "description": "A todolist using tray",
-  "homepage": "https://andersonhqds.github.io/anderson-dev",
-  "license": "MIT",
-  "build": {
-	"appId": "com.electron.todotop",
-	"productName": "TodoTop",
-	"linux": {
-	  "category": "Utility",
-	  "target": [
-		  "deb",
-		  "snap"
-	  ]
-	}
-  },
-  "scripts": {
-	"start": "electron ./main.js",
-	"pack": "electron-builder --dir",
-	"dist": "electron-builder",
-	"dist:linux": "electron-builder --linux"
-  },
-  "devDependencies": {
-    "electron-builder": "^21.1.5",
-	"eslint": "^6.1.0",
-	"electron": "^6.0.0"
-  },
-  "dependencies": {
-    "@sentry/electron": "^0.17.3",
-    "electron-prompt": "^1.3.1"
+ "name": "todotop",
+ "version": "1.0.0",
+ "main": "main.js",
+ "author": "Anderson <contatoahenrique@gmail.com>",
+ "description": "A todolist using tray",
+ "homepage": "https://andersonhqds.github.io/anderson-dev",
+ "license": "MIT",
+ "build": {
+  "appId": "com.electron.todotop",
+  "productName": "TodoTop",
+  "icon": "./build/icons",
+  "linux": {
+   "category": "Utility",
+   "target": [
+    "deb",
+    "snap"
+   ]
   }
+ },
+ "scripts": {
+  "start": "electron ./main.js",
+  "pack": "electron-builder --dir",
+  "dist": "electron-builder",
+  "dist:linux": "electron-builder --linux"
+ },
+ "devDependencies": {
+  "electron": "^6.0.0",
+  "electron-builder": "^21.1.5",
+  "eslint": "^6.1.0"
+ },
+ "dependencies": {
+  "@sentry/electron": "^0.17.3"
+ }
 }
